Add search capabilities to @markprompt/* (#31)
* Start work on adding search primitives

* Split up core, add search results component, only set defaults in core

* Show search results in Markprompt component

* Update footer

* UI adjustments

* Add custom SearchResult component to web component

* UI adjustments

* Handle state transitions

* UI improvements

* Add keyboard interaction for search results, no results component,

* Add changesets

* Update README

* Update with-css-modules

* Fix test suite

* Add jsdoc to types

* Update import names

* CSS tweaks

* Error handling

* Add primary border color

* Snippets and tag

* Upload API URL

* Disable search

* Fix keyword matching

* Add getResultHref

* Add animated search/answer transition and more focus management

* Update READMEs

* Specify lib in @markprompt/react tsconfig

* Catch AbortErrors and don't log the errors

* Remove default open

* Allow logging in analyze

---------

Co-authored-by: Michael Fester <michael.fester@gmail.com>

--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -9,6 +9,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
@@ -18,6 +19,7 @@
   --markprompt-radius: 8px;
   --markprompt-text-size: 0.875rem;
   --markprompt-button-icon-size: 1rem;
+  --markprompt-icon-stroke-width: 2px;
 }
 
 .dark {
@@ -29,6 +31,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #0e0e0e;
   --markprompt-secondaryForeground: #ffffff;
   --markprompt-primaryHighlight: #ec4899;
@@ -102,6 +105,7 @@ button {
   color: var(--markprompt-foreground);
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
   padding: 0.25rem;
   border-radius: 4px;
   cursor: pointer;
@@ -127,6 +131,7 @@ button {
   color: var(--markprompt-foreground);
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
   cursor: pointer;
   display: grid;
   place-items: center;
