--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -7,6 +7,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
@@ -16,6 +17,7 @@
   --markprompt-radius: 8px;
   --markprompt-text-size: 0.875rem;
   --markprompt-button-icon-size: 1rem;
+  --markprompt-icon-stroke-width: 2px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,6 +30,7 @@
     --markprompt-input: #ffffff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #ffffff;
+    --markprompt-primaryMuted: #8285f4;
     --markprompt-secondary: #0e0e0e;
     --markprompt-secondaryForeground: #ffffff;
     --markprompt-primaryHighlight: #ec4899;
@@ -63,6 +66,7 @@
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  stroke-width: var(--markprompt-icon-stroke-width);
   transition-property: opacity;
   transition-duration: 200ms;
 }
@@ -109,13 +113,16 @@
 
 :where(.MarkpromptClose) {
   position: absolute;
-  top: 0.75rem;
+  top: 0.8rem;
   right: 0.75rem;
-  color: var(--markprompt-foreground);
-  width: var(--markprompt-button-icon-size);
-  height: var(--markprompt-button-icon-size);
+  color: var(--markprompt-mutedForeground);
+  background-color: var(--markprompt-muted);
   padding: 0.25rem;
+  border-style: solid;
+  border-width: 1px;
   border-radius: 4px;
+  border-color: var(--markprompt-border);
+  text-transform: uppercase;
   cursor: pointer;
   display: grid;
   place-items: center;
@@ -125,29 +132,51 @@
 }
 
 :where(.MarkpromptClose:hover) {
-  opacity: 0.8;
+  opacity: 0.9;
+  color: var(--markprompt-foreground);
 }
 
 :where(.MarkpromptClose:focus) {
   box-shadow: inset 0 0 0 2px var(--markprompt-primary);
 }
 
+:where(.MarkpromptClose kbd) {
+  font-weight: 600;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 0.5rem;
+}
+
 :where(.MarkpromptForm) {
-  display: grid;
-  grid-template-columns: 3.5rem 1fr 3.5rem;
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
   border-bottom: 1px solid var(--markprompt-border);
+  padding: 0 1rem 0 0.75rem;
+  gap: 0.75rem;
 }
 
 :where(.MarkpromptPromptLabel) {
-  display: grid;
-  place-items: center;
   cursor: pointer;
+  display: flex;
+  flex: none;
+  padding: 4px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent;
+}
+
+:where(.MarkpromptHighlightedIcon) {
+  color: var(--markprompt-primary);
+  width: var(--markprompt-button-icon-size);
+  height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
 }
 
 :where(.MarkpromptSearchIcon) {
-  color: var(--markprompt-foreground);
+  color: var(--markprompt-mutedForeground);
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
 }
 
 :where(.MarkpromptTitle) {
@@ -173,8 +202,38 @@
   outline: none;
 }
 
-:where(.MarkpromptAutoScroller) {
+/* Remove 2px padding that some browsers add to input */
+:where(.MarkpromptPrompt[type='search' i]) {
+  padding: 1rem 3rem 1rem 0;
+}
+
+/* Remove the 'x' clear button from the search :where(.MarkpromptPrompt field */
+.MarkpromptPrompt[type='search']::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+.MarkpromptPrompt[type='search']::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+.MarkpromptPrompt[type='search']::-webkit-search-decoration,
+.MarkpromptPrompt[type='search']::-webkit-search-cancel-button,
+.MarkpromptPrompt[type='search']::-webkit-search-results-button,
+.MarkpromptPrompt[type='search']::-webkit-search-results-decoration {
+  display: none;
+}
+
+:where(.MarkpromptPromptContainer) {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+:where(.MarkpromptAutoScroller) {
+  flex-grow: 1;
   -ms-overflow-style: none;
   scroll-behavior: smooth;
   scrollbar-width: none;
@@ -448,7 +507,6 @@
   font-weight: inherit;
   color: inherit;
   font-size: inherit;
-  font-family: inherit;
   line-height: inherit;
 }
 
@@ -623,9 +681,9 @@
 
 :where([data-loading-state='preload'] .MarkpromptProgress) {
   position: absolute;
-  top: -2px;
+  top: -1px;
   left: 0;
-  height: 2px;
+  height: 3px;
   background-image: linear-gradient(
     to right,
     var(--markprompt-primaryHighlight),
@@ -650,7 +708,8 @@
 }
 
 :where(.MarkpromptReferences) {
-  padding-block: 1rem;
+  position: relative;
+  padding-top: 1rem;
   padding-inline: 2rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
@@ -662,6 +721,7 @@
   animation: markprompt-popup 200ms ease-out forwards;
   overflow: hidden;
   box-sizing: border-box;
+  flex: none;
 }
 
 :where(.MarkpromptReferences[data-loading-state='preload']) {
@@ -693,6 +753,7 @@
   align-items: center;
   gap: 0.5rem;
   padding-left: 0;
+  padding-bottom: 20px;
   list-style-type: none;
   overflow-x: auto;
   -ms-overflow-style: none;
@@ -703,7 +764,7 @@
   display: none;
 }
 
-.MarkpromptReference {
+:where(.MarkpromptReference) {
   font-size: 0.875rem;
   line-height: 1.5rem;
   animation-name: markprompt-slide-up;
@@ -712,7 +773,7 @@
   transition-timing-function: ease-in-out;
 }
 
-.MarkpromptReference a {
+:where(.MarkpromptReference a) {
   display: inline-block;
   text-decoration: none;
   padding: 0.125rem 0.5rem;
@@ -725,8 +786,256 @@
   white-space: nowrap;
 }
 
-.MarkpromptReference a:hover {
+:where(.MarkpromptReference a:hover) {
   opacity: 0.8;
+}
+
+:where(.MarkpromptBackButton) {
+  font-size: var(--markprompt-text-size);
+  background-color: var(--markprompt-muted);
+  color: var(--markprompt-primary);
+  border-bottom: 1px solid var(--markprompt-border);
+  display: flex;
+  flex: none;
+  align-items: center;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  gap: 0.25rem;
+  cursor: pointer;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  width: 100%;
+  outline: none;
+}
+
+:where(.MarkpromptBackButton span:first-child) {
+  display: flex;
+  align-items: center;
+}
+
+:where(.MarkpromptBackButton span:last-child) {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+}
+
+:where(.MarkpromptSearchResultsContainer) {
+  padding: 0.5rem;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+:where(.MarkpromptSearchAnswerButton) {
+  display: block;
+  box-sizing: border-box;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--markprompt-muted);
+  font-size: var(--markprompt-text-size);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  outline: none;
+}
+
+:where(.MarkpromptSearchAnswerButton:hover) {
+  background-color: var(--markprompt-muted);
+}
+
+:where(.MarkpromptSearchAnswerButton:focus) {
+  background-color: var(--markprompt-primary);
+}
+
+:where(.MarkpromptSearchAnswerButton:focus .MarkpromptSearchIcon) {
+  color: var(--markprompt-foreground);
+}
+
+:where(.MarkpromptSearchAnswerButton :last-child) {
+  margin-left: auto;
+}
+
+:where(.MarkpromptSearchAnswerButton kbd) {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 4px;
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptKeyboardKey) {
+  color: var(--markprompt-mutedForeground);
+  stroke-width: var(--markprompt-icon-stroke-width);
+  width: calc(var(--markprompt-button-icon-size) * 0.8);
+  height: calc(var(--markprompt-button-icon-size) * 0.8);
+}
+
+:where(.MarkpromptSearchResults),
+:where(.MarkpromptSearchSubResults) {
+  list-style-position: inside;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+:where(.MarkpromptSearchResults:focus) {
+  outline: none;
+}
+
+:where(.MarkpromptSearchResults) {
+  padding: 0rem 0rem;
+}
+
+:where(.MarkpromptSearchSubResults) {
+  padding: 0;
+}
+
+:where(.MarkpromptSearchResult) {
+  display: list-item;
+  text-align: -webkit-match-parent;
+  padding: 0;
+  padding-top: 0.5rem;
+}
+
+:where(.MarkpromptSearchResult a) {
+  color: inherit;
+  text-decoration: none;
+}
+
+:where(.MarkpromptSearchResultIndented) {
+  margin-left: 1.75rem;
+  padding-left: 1rem;
+  padding-right: 0;
+  border-left: 1px solid var(--markprompt-border);
+}
+
+:first-child(.MarkpromptSearchResultIndented) {
+  padding-top: 1.5rem;
+}
+
+:where(.MarkpromptSearchResultLink) {
+  display: block;
+  border-radius: 0.5rem;
+  padding: 0.75rem 1rem;
+  background-color: var(--markprompt-muted);
+}
+
+:where([aria-selected='true'] .MarkpromptSearchResultLink) {
+  background-color: var(--markprompt-primary);
+  color: var(--markprompt-primaryForeground);
+}
+
+:where(.MarkpromptSearchResultContainer) {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  gap: 1rem;
+}
+
+:where(.MarkpromptSearchResultIconWrapper) {
+  display: flex;
+  flex: none;
+  padding: 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent;
+}
+
+:where(.MarkpromptSearchResultIconWrapperBordered) {
+  background-color: #fff;
+  border-radius: 0.25rem;
+  border-style: solid;
+  border-color: var(--markprompt-border);
+}
+
+:where([aria-selected='true'] .MarkpromptSearchResultIconWrapperBordered) {
+  background-color: transparent;
+  border-color: var(--markprompt-primaryMuted);
+}
+
+:where(.MarkpromptSearchResultIcon) {
+  color: var(--markprompt-mutedForeground);
+  stroke-width: var(--markprompt-icon-stroke-width);
+  width: var(--markprompt-button-icon-size);
+  height: var(--markprompt-button-icon-size);
+}
+
+:where([aria-selected='true'] .MarkpromptSearchResultIcon) {
+  color: var(--markprompt-primaryForeground);
+}
+
+:where(.MarkpromptSearchResultContentWrapper) {
+  display: flex;
+  flex-grow: 1;
+  font-size: var(--markprompt-text-size);
+  flex-direction: column;
+  gap: 0.25rem;
+  overflow: hidden;
+}
+
+:where(.MarkpromptSearchResultTitle) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+}
+
+:where(.MarkpromptSearchResultTag) {
+  width: min-content;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+  background-color: #fff;
+  border-radius: 9999px;
+  padding: 1px 8px;
+  font-size: calc(var(--markprompt-text-size) * 0.85);
+  font-weight: 500;
+}
+
+:where([aria-selected='true'] .MarkpromptSearchResultTag) {
+  background-color: var(--markprompt-primaryMuted);
+  border-color: var(--markprompt-primaryMuted);
+}
+
+:where(.MarkpromptMatch) {
+  font-weight: 600;
+  color: var(--markprompt-primary);
+  border-bottom-color: var(--markprompt-primary);
+  border-bottom-width: 0.1rem;
+  border-bottom-style: solid;
+}
+
+[aria-selected='true'] .MarkpromptSearchResultTag .MarkpromptMatch,
+:where(.MarkpromptSearchResultTag .MarkpromptMatch) {
+  border-bottom-color: transparent;
+}
+
+:where([aria-selected='true'] .MarkpromptMatch) {
+  border-color: var(--markprompt-primaryForeground);
+  color: var(--markprompt-primaryForeground);
+}
+
+:where(.MarkpromptNoSearchResults) {
+  font-size: var(--markprompt-text-size);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 auto;
+}
+
+:where(.MarkpromptNoSearchResults p) {
+  color: var(--markprompt-mutedForeground);
+  padding: 1rem;
+  text-align: center;
+}
+
+:where(.MarkpromptNoSearchResults span) {
+  color: var(--markprompt-foreground);
 }
 
 @keyframes markprompt-show-content {
@@ -795,5 +1104,27 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes markprompt-slide-from-left {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes markprompt-slide-from-right {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
