--- a/examples/with-docusaurus/src/css/custom.css
+++ b/examples/with-docusaurus/src/css/custom.css
@@ -24,6 +24,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
@@ -33,6 +34,7 @@
   --markprompt-radius: 8px;
   --markprompt-text-size: 0.875rem;
   --markprompt-button-icon-size: 1rem;
+  --markprompt-icon-stroke-width: 2px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -54,6 +56,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #0e0e0e;
   --markprompt-secondaryForeground: #ffffff;
   --markprompt-primaryHighlight: #ec4899;
